tests/ui/parser/issue-103451.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-103451.rs:5:15
   |
LL | struct S {
   |          - unclosed delimiter
LL |     x: [u8; R
   |        -      ^
   |        |
   |        unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-103451.rs:5:15
   |
LL | struct S {
   |          - unclosed delimiter
LL |     x: [u8; R
   |        -      ^
   |        |
   |        unclosed delimiter

error[E0423]: expected value, found struct `R`
  --> $DIR/issue-103451.rs:5:13
   |
LL | struct R { }
   | ------------ `R` defined here
LL | struct S {
LL |     x: [u8; R
   |             ^ help: use struct literal syntax instead: `R {}`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0423`.
